--- a/fichatecnica.html
+++ b/fichatecnica.html
@@ -3,33 +3,25 @@
 <head>
 <meta charset="UTF-8">
 <title>Ficha Técnica • CMV</title>
-<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;800&display=swap" rel="stylesheet">
 <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 
 <style>
-:root{
-  --bg:#f4f6f8;
-  --card:#ffffff;
-  --primary:#2563eb;
-  --text:#0f172a;
-  --muted:#64748b;
-}
-*{box-sizing:border-box}
 body{
   margin:0;
-  padding:18px;
-  background:var(--bg);
-  font-family:Inter,Arial,sans-serif;
+  padding:20px;
+  background:#f4f6f8;
+  font-family:Inter
 }
 .container{
-  max-width:960px;
+  max-width:980px;
   margin:auto;
-  background:var(--card);
+  background:#fff;
   border-radius:28px;
   padding:28px;
-  box-shadow:0 30px 70px rgba(0,0,0,.12);
+  box-shadow:0 30px 70px rgba(0,0,0,.12)
 }
 h1{margin:0 0 22px;font-weight:800}
 label{font-size:13px;font-weight:800;margin-top:16px;display:block}
@@ -38,21 +30,39 @@ input,button{
   padding:14px 16px;
   border-radius:16px;
   border:1px solid #cbd5e1;
-  margin-top:6px;
+  margin-top:6px
 }
 button{
-  background:var(--primary);
+  background:#2563eb;
   color:#fff;
   font-weight:800;
   border:none;
-  cursor:pointer;
+  cursor:pointer
 }
 .lista .item{
   background:#f1f5f9;
   padding:14px;
   border-radius:14px;
   margin-top:6px;
-  cursor:pointer;
+  cursor:pointer
+}
+.grid{
+  display:grid;
+  grid-template-columns:2fr 1fr 1fr auto;
+  gap:8px
+}
+.kpis{
+  display:grid;
+  grid-template-columns:repeat(4,1fr);
+  gap:14px;
+  margin-top:22px
+}
+.kpi{
+  background:#f8fafc;
+  border-radius:18px;
+  padding:18px;
+  text-align:center;
+  font-weight:800
 }
 .badge{
   display:inline-block;
@@ -60,25 +70,7 @@ button{
   padding:6px 14px;
   border-radius:999px;
   background:#e0f2fe;
-  font-weight:800;
-}
-.grid{
-  display:grid;
-  grid-template-columns:2fr 1fr 1fr auto;
-  gap:8px;
-}
-.kpis{
-  display:grid;
-  grid-template-columns:repeat(4,1fr);
-  gap:12px;
-  margin-top:20px;
-}
-.kpi{
-  background:#f8fafc;
-  border-radius:18px;
-  padding:16px;
-  text-align:center;
-  font-weight:800;
+  font-weight:800
 }
 </style>
 </head>
@@ -127,19 +119,17 @@ button{
 </div>
 
 <script>
-/* ========= SUPABASE ========= */
 const sb = supabase.createClient(
   "https://dsngsuetvucxeztbgbtb.supabase.co",
   "sb_publishable_rN6fZXNxnjgwnbXTPXEP5A_7n5Ty9Cp"
 );
 
-/* ========= ESTADO ========= */
 let produtoSelecionado = null;
 let ingredienteSelecionado = null;
 let ingredientes = [];
 let cmvTotal = 0;
 
-/* ========= BUSCA PRODUTO ========= */
+/* ===== BUSCA PRODUTO ===== */
 buscaProduto.onkeyup = async () => {
   if (buscaProduto.value.length < 2) return listaProduto.innerHTML = "";
 
@@ -159,27 +149,26 @@ async function selecionarProduto(id, nome, unidade){
   const r = await fetch(`/api/produto-preco?produtoId=${id}`);
   const j = await r.json();
 
-  if (!j.items || !j.items.length) {
-    alert("Preço não encontrado para este produto");
+  if (!j.items?.length) {
+    alert("Preço não encontrado");
     return;
   }
 
-  const precoData = j.items[0];
+  const p = j.items[0];
 
   produtoSelecionado = {
     id,
     nome,
     unidade,
-    preco_venda: precoData.precoVenda1 || 0,
-    custo: precoData.custoProduto || precoData.precoMedioDeReposicao || 0
+    preco: p.precoVenda1 || 0
   };
 
+  precoVenda.innerText = produtoSelecionado.preco.toFixed(2);
   infoProduto.innerText = `Unidade: ${unidade}`;
-  precoVenda.innerText = produtoSelecionado.preco_venda.toFixed(2);
   listaProduto.innerHTML = "";
 }
 
-/* ========= BUSCA INGREDIENTE ========= */
+/* ===== BUSCA INGREDIENTE ===== */
 buscaIngrediente.onkeyup = async () => {
   if (buscaIngrediente.value.length < 2) return listaIngrediente.innerHTML = "";
 
@@ -199,37 +188,36 @@ async function selecionarIngrediente(id, nome, unidade){
   const r = await fetch(`/api/produto-preco?produtoId=${id}`);
   const j = await r.json();
 
-  if (!j.items || !j.items.length) {
-    alert("Custo não encontrado para este ingrediente");
+  if (!j.items?.length) {
+    alert("Custo não encontrado");
     return;
   }
 
-  const precoData = j.items[0];
+  const p = j.items[0];
 
   ingredienteSelecionado = {
-    id,
     nome,
     unidade,
-    custo_unitario: precoData.custoProduto || precoData.precoMedioDeReposicao || 0
+    custo: p.custoProduto || p.precoMedioDeReposicao || 0
   };
 
   un.value = unidade;
-  custo.value = ingredienteSelecionado.custo_unitario.toFixed(2);
+  custo.value = ingredienteSelecionado.custo.toFixed(2);
   listaIngrediente.innerHTML = "";
 }
 
-/* ========= ADD INGREDIENTE ========= */
+/* ===== ADD INGREDIENTE ===== */
 function addIngrediente(){
   if (!ingredienteSelecionado || !qtd.value) return;
 
   const quantidade = Number(qtd.value);
-  const custoTotal = quantidade * ingredienteSelecionado.custo_unitario;
+  const custoTotal = quantidade * ingredienteSelecionado.custo;
 
   ingredientes.push({
     nome: ingredienteSelecionado.nome,
     unidade: ingredienteSelecionado.unidade,
-    custo_unitario: ingredienteSelecionado.custo_unitario,
     quantidade,
+    custo_unitario: ingredienteSelecionado.custo,
     custo_total: custoTotal
   });
 
@@ -237,7 +225,7 @@ function addIngrediente(){
   render();
 }
 
-/* ========= RENDER ========= */
+/* ===== RENDER ===== */
 function render(){
   listaIng.innerHTML = ingredientes.map(i =>
     `<p>${i.nome} (${i.unidade}) — R$ ${i.custo_total.toFixed(2)}</p>`
@@ -246,13 +234,13 @@ function render(){
   cmvTotalSpan.innerText = cmvTotal.toFixed(2);
   cmvUnit.innerText = (cmvTotal / rendimentoFinal.value).toFixed(2);
 
-  const preco = produtoSelecionado?.preco_venda || 0;
+  const preco = produtoSelecionado?.preco || 0;
   margem.innerText = preco
     ? (((preco - (cmvTotal / rendimentoFinal.value)) / preco) * 100).toFixed(1)
     : 0;
 }
 
-/* ========= SALVAR ========= */
+/* ===== SALVAR ===== */
 async function salvar(){
   if (!produtoSelecionado) {
     alert("Selecione um produto");
@@ -260,10 +248,9 @@ async function salvar(){
   }
 
   await sb.from("ficha_tecnica").insert({
-    produto_id: produtoSelecionado.id,
     produto_nome: produtoSelecionado.nome,
     unidade_produto: produtoSelecionado.unidade,
-    preco_venda: produtoSelecionado.preco_venda,
+    preco_venda: produtoSelecionado.preco,
     receita: ingredientes,
     rendimento: rendimentoFinal.value,
     custo_total: cmvTotal,
