--- a/fichatecnica.html
+++ b/fichatecnica.html
@@ -2,67 +2,82 @@
 <html lang="pt-BR">
 <head>
 <meta charset="UTF-8">
-<title>Ficha Técnica • CMV</title>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Ficha Técnica • CMV Profissional</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
 
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;800&display=swap" rel="stylesheet">
 <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 
 <style>
+:root{
+  --bg:#f3f4f6;
+  --card:#ffffff;
+  --primary:#2563eb;
+  --danger:#dc2626;
+  --text:#0f172a;
+  --muted:#64748b;
+}
+*{box-sizing:border-box}
 body{
   margin:0;
-  padding:20px;
-  background:#f4f6f8;
-  font-family:Inter
+  padding:18px;
+  background:linear-gradient(180deg,#eef2ff,#f8fafc);
+  font-family:Inter,Arial,sans-serif;
+  color:var(--text);
 }
 .container{
-  max-width:980px;
+  max-width:1000px;
   margin:auto;
-  background:#fff;
-  border-radius:28px;
-  padding:28px;
-  box-shadow:0 30px 70px rgba(0,0,0,.12)
+  background:var(--card);
+  border-radius:30px;
+  padding:30px;
+  box-shadow:0 35px 80px rgba(0,0,0,.12);
 }
-h1{margin:0 0 22px;font-weight:800}
-label{font-size:13px;font-weight:800;margin-top:16px;display:block}
+h1{
+  margin:0 0 24px;
+  font-size:26px;
+  font-weight:800;
+}
+h3{
+  margin:26px 0 12px;
+  font-weight:800;
+}
+label{
+  font-size:13px;
+  font-weight:800;
+  margin-top:16px;
+  display:block;
+}
 input,button{
   width:100%;
   padding:14px 16px;
-  border-radius:16px;
+  border-radius:18px;
   border:1px solid #cbd5e1;
-  margin-top:6px
+  margin-top:6px;
+  font-size:14px;
+}
+input:focus{
+  outline:none;
+  border-color:var(--primary);
 }
 button{
-  background:#2563eb;
+  background:linear-gradient(180deg,#2563eb,#1e40af);
   color:#fff;
   font-weight:800;
   border:none;
-  cursor:pointer
+  cursor:pointer;
 }
+button:active{transform:scale(.98)}
 .lista .item{
   background:#f1f5f9;
-  padding:14px;
-  border-radius:14px;
+  padding:14px 16px;
+  border-radius:16px;
   margin-top:6px;
-  cursor:pointer
+  cursor:pointer;
+  transition:.15s;
 }
-.grid{
-  display:grid;
-  grid-template-columns:2fr 1fr 1fr auto;
-  gap:8px
-}
-.kpis{
-  display:grid;
-  grid-template-columns:repeat(4,1fr);
-  gap:14px;
-  margin-top:22px
-}
-.kpi{
-  background:#f8fafc;
-  border-radius:18px;
-  padding:18px;
-  text-align:center;
-  font-weight:800
+.lista .item:hover{
+  background:#e2e8f0;
 }
 .badge{
   display:inline-block;
@@ -70,13 +85,55 @@ button{
   padding:6px 14px;
   border-radius:999px;
   background:#e0f2fe;
-  font-weight:800
+  font-weight:800;
+  font-size:12px;
+}
+.warn{
+  background:#fef3c7;
+  color:#92400e;
+}
+.grid{
+  display:grid;
+  grid-template-columns:2fr 1fr 1fr auto;
+  gap:8px;
+}
+.kpis{
+  display:grid;
+  grid-template-columns:repeat(4,1fr);
+  gap:14px;
+  margin-top:26px;
+}
+.kpi{
+  background:#f8fafc;
+  border-radius:20px;
+  padding:18px;
+  text-align:center;
+  font-weight:800;
+  box-shadow:inset 0 0 0 1px #e5e7eb;
+}
+.kpi span{
+  display:block;
+  margin-top:6px;
+  font-size:18px;
+}
+.ing{
+  background:#f8fafc;
+  border-radius:14px;
+  padding:10px 14px;
+  margin-top:6px;
+  font-size:13px;
+  display:flex;
+  justify-content:space-between;
+}
+.footer-btn{
+  margin-top:30px;
 }
 </style>
 </head>
 
 <body>
 <div class="container">
+
 <h1>📋 Ficha Técnica</h1>
 
 <!-- PRODUTO -->
@@ -109,157 +166,151 @@ button{
 <input id="rendimentoFinal" type="number" value="1">
 
 <div class="kpis">
-  <div class="kpi">CMV Total<br>R$ <span id="cmvTotal">0.00</span></div>
-  <div class="kpi">CMV Unit<br>R$ <span id="cmvUnit">0.00</span></div>
-  <div class="kpi">Preço Venda<br>R$ <span id="precoVenda">0.00</span></div>
-  <div class="kpi">Margem<br><span id="margem">0</span>%</div>
+  <div class="kpi">CMV Total<span id="cmvTotal">R$ 0,00</span></div>
+  <div class="kpi">CMV Unit<span id="cmvUnit">R$ 0,00</span></div>
+  <div class="kpi">Preço Venda<span id="precoVenda">R$ 0,00</span></div>
+  <div class="kpi">Margem<span id="margem">0%</span></div>
 </div>
 
-<button onclick="salvar()">Salvar Ficha Técnica</button>
+<div class="footer-btn">
+  <button onclick="salvar()">Salvar Ficha Técnica</button>
+</div>
+
 </div>
 
 <script>
+/* ===== SUPABASE ===== */
 const sb = supabase.createClient(
   "https://dsngsuetvucxeztbgbtb.supabase.co",
   "sb_publishable_rN6fZXNxnjgwnbXTPXEP5A_7n5Ty9Cp"
 );
 
-let produtoSelecionado = null;
-let ingredienteSelecionado = null;
-let ingredientes = [];
-let cmvTotal = 0;
+let produtoSelecionado=null;
+let ingredienteSelecionado=null;
+let ingredientes=[];
+let cmvTotal=0;
+
+/* ===== HELPERS ===== */
+const moeda=v=>"R$ "+Number(v||0).toFixed(2);
 
 /* ===== BUSCA PRODUTO ===== */
-buscaProduto.onkeyup = async () => {
-  if (buscaProduto.value.length < 2) return listaProduto.innerHTML = "";
-
-  const r = await fetch(`/api/produtos-busca?q=${encodeURIComponent(buscaProduto.value)}`);
-  const j = await r.json();
-
-  listaProduto.innerHTML = "";
-  (j.items || []).forEach(p => {
-    listaProduto.innerHTML += `
-      <div class="item" onclick="selecionarProduto(${p.id}, '${p.descricao}', '${p.unidadeDeVenda}')">
+buscaProduto.onkeyup=async()=>{
+  if(buscaProduto.value.length<2) return listaProduto.innerHTML="";
+  const r=await fetch(`/api/produtos-busca?q=${encodeURIComponent(buscaProduto.value)}`);
+  const j=await r.json();
+  listaProduto.innerHTML="";
+  (j.items||[]).forEach(p=>{
+    listaProduto.innerHTML+=`
+      <div class="item" onclick="selecionarProduto(${p.id},'${p.descricao}','${p.unidadeDeVenda||''}')">
         ${p.descricao}
       </div>`;
   });
 };
 
-async function selecionarProduto(id, nome, unidade){
-  const r = await fetch(`/api/produto-preco?produtoId=${id}`);
-  const j = await r.json();
+async function selecionarProduto(id,nome,unidade){
+  const r=await fetch(`/api/produto-preco?produtoId=${id}`);
+  const j=await r.json();
+  const p=j.items?.[0]||{};
 
-  if (!j.items?.length) {
-    alert("Preço não encontrado");
-    return;
-  }
+  const precoVenda=
+    Number(p.precoVenda1)||Number(p.precoOferta1)||0;
 
-  const p = j.items[0];
+  const custo=
+    Number(p.precoMedioDeReposicao)||
+    Number(p.precoFiscalDeReposicao)||
+    Number(p.custoProduto)||0;
 
-  produtoSelecionado = {
-    id,
-    nome,
-    unidade,
-    preco: p.precoVenda1 || 0
-  };
+  produtoSelecionado={id,nome,unidade,precoVenda,custo};
 
-  precoVenda.innerText = produtoSelecionado.preco.toFixed(2);
-  infoProduto.innerText = `Unidade: ${unidade}`;
-  listaProduto.innerHTML = "";
+  precoVendaEl.innerText=moeda(precoVenda);
+  infoProduto.innerHTML=`Unidade: ${unidade||"-"} ${precoVenda===0?" • ⚠ Sem preço":""}`;
+  infoProduto.className=`badge ${precoVenda===0?"warn":""}`;
+  listaProduto.innerHTML="";
+  render();
 }
 
 /* ===== BUSCA INGREDIENTE ===== */
-buscaIngrediente.onkeyup = async () => {
-  if (buscaIngrediente.value.length < 2) return listaIngrediente.innerHTML = "";
-
-  const r = await fetch(`/api/produtos-busca?q=${encodeURIComponent(buscaIngrediente.value)}`);
-  const j = await r.json();
-
-  listaIngrediente.innerHTML = "";
-  (j.items || []).forEach(p => {
-    listaIngrediente.innerHTML += `
-      <div class="item" onclick="selecionarIngrediente(${p.id}, '${p.descricao}', '${p.unidadeDeVenda}')">
+buscaIngrediente.onkeyup=async()=>{
+  if(buscaIngrediente.value.length<2) return listaIngrediente.innerHTML="";
+  const r=await fetch(`/api/produtos-busca?q=${encodeURIComponent(buscaIngrediente.value)}`);
+  const j=await r.json();
+  listaIngrediente.innerHTML="";
+  (j.items||[]).forEach(p=>{
+    listaIngrediente.innerHTML+=`
+      <div class="item" onclick="selecionarIngrediente(${p.id},'${p.descricao}','${p.unidadeDeVenda||''}')">
         ${p.descricao}
       </div>`;
   });
 };
 
-async function selecionarIngrediente(id, nome, unidade){
-  const r = await fetch(`/api/produto-preco?produtoId=${id}`);
-  const j = await r.json();
+async function selecionarIngrediente(id,nome,unidade){
+  const r=await fetch(`/api/produto-preco?produtoId=${id}`);
+  const j=await r.json();
+  const p=j.items?.[0]||{};
 
-  if (!j.items?.length) {
-    alert("Custo não encontrado");
-    return;
-  }
+  const custo=
+    Number(p.precoMedioDeReposicao)||
+    Number(p.precoFiscalDeReposicao)||
+    Number(p.custoProduto)||0;
 
-  const p = j.items[0];
-
-  ingredienteSelecionado = {
-    nome,
-    unidade,
-    custo: p.custoProduto || p.precoMedioDeReposicao || 0
-  };
-
-  un.value = unidade;
-  custo.value = ingredienteSelecionado.custo.toFixed(2);
-  listaIngrediente.innerHTML = "";
+  ingredienteSelecionado={nome,unidade,custo};
+  un.value=unidade;
+  custo.value=custo.toFixed(2);
+  listaIngrediente.innerHTML="";
 }
 
 /* ===== ADD INGREDIENTE ===== */
 function addIngrediente(){
-  if (!ingredienteSelecionado || !qtd.value) return;
-
-  const quantidade = Number(qtd.value);
-  const custoTotal = quantidade * ingredienteSelecionado.custo;
-
-  ingredientes.push({
-    nome: ingredienteSelecionado.nome,
-    unidade: ingredienteSelecionado.unidade,
-    quantidade,
-    custo_unitario: ingredienteSelecionado.custo,
-    custo_total: custoTotal
-  });
-
-  cmvTotal += custoTotal;
+  if(!ingredienteSelecionado||!qtd.value) return;
+  const quantidade=Number(qtd.value);
+  const total=quantidade*ingredienteSelecionado.custo;
+  ingredientes.push({...ingredienteSelecionado,quantidade,custo_total:total});
+  cmvTotal+=total;
+  qtd.value="";
   render();
 }
 
 /* ===== RENDER ===== */
 function render(){
-  listaIng.innerHTML = ingredientes.map(i =>
-    `<p>${i.nome} (${i.unidade}) — R$ ${i.custo_total.toFixed(2)}</p>`
+  listaIng.innerHTML=ingredientes.map(i=>
+    `<div class="ing">
+      <span>${i.nome} (${i.unidade}) x ${i.quantidade}</span>
+      <strong>${moeda(i.custo_total)}</strong>
+    </div>`
   ).join("");
 
-  cmvTotalSpan.innerText = cmvTotal.toFixed(2);
-  cmvUnit.innerText = (cmvTotal / rendimentoFinal.value).toFixed(2);
+  cmvTotalEl.innerText=moeda(cmvTotal);
+  cmvUnitEl.innerText=moeda(cmvTotal/(rendimentoFinal.value||1));
 
-  const preco = produtoSelecionado?.preco || 0;
-  margem.innerText = preco
-    ? (((preco - (cmvTotal / rendimentoFinal.value)) / preco) * 100).toFixed(1)
-    : 0;
+  const preco=produtoSelecionado?.precoVenda||0;
+  margemEl.innerText=preco?(((preco-(cmvTotal/(rendimentoFinal.value||1)))/preco)*100).toFixed(1)+"%":"0%";
 }
 
 /* ===== SALVAR ===== */
 async function salvar(){
-  if (!produtoSelecionado) {
+  if(!produtoSelecionado){
     alert("Selecione um produto");
     return;
   }
-
   await sb.from("ficha_tecnica").insert({
-    produto_nome: produtoSelecionado.nome,
-    unidade_produto: produtoSelecionado.unidade,
-    preco_venda: produtoSelecionado.preco,
-    receita: ingredientes,
-    rendimento: rendimentoFinal.value,
-    custo_total: cmvTotal,
-    custo_unitario: cmvTotal / rendimentoFinal.value,
-    margem_percentual: margem.innerText
+    produto_id:produtoSelecionado.id,
+    produto_nome:produtoSelecionado.nome,
+    unidade_produto:produtoSelecionado.unidade,
+    preco_venda:produtoSelecionado.precoVenda,
+    receita:ingredientes,
+    rendimento:rendimentoFinal.value,
+    custo_total:cmvTotal,
+    custo_unitario:cmvTotal/(rendimentoFinal.value||1),
+    margem_percentual:margemEl.innerText
   });
-
   alert("Ficha técnica salva com sucesso!");
 }
+
+/* ===== BINDS ===== */
+const cmvTotalEl=document.getElementById("cmvTotal");
+const cmvUnitEl=document.getElementById("cmvUnit");
+const precoVendaEl=document.getElementById("precoVenda");
+const margemEl=document.getElementById("margem");
 </script>
 </body>
 </html>
